packages/svelte/tests/validator/samples/tag-custom-element-options-true/_config.js
import { test } from '../../test';

export default test({
	compileOptions: {
		customElement: true
	}
});
